Updated tests and added fix for overflowing state for reddit apps

--- a/app/static/css/addons.css
+++ b/app/static/css/addons.css
@@ -123,3 +123,7 @@
 .navbar-dark .navbar-nav .nav-link.active {
     color: #00bc8c;
 }
+
+.jumbotron {
+  overflow-wrap: break-word;
+}
